--- a/DA/0_data_extract.ipynb
+++ b/DA/0_data_extract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
     "                , a.closeddate       as q_closeddate \\\n",
     "                , replace(replace(lower(a.tags), '<', ''), '>', ' ')as q_tags \\\n",
     "           from posts a \\\n",
-    "           where a.creationdate between '2013-11-01' and '2023-12-01' \\\n",
+    "           where a.creationdate between '2013-01-01' and '2023-12-01' \\\n",
     "             and a.posttypeid = '1' \\\n",
     "             and a.owneruserid is not null \\\n",
     "       )   x \\\n",
@@ -2196,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2326,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2344,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2362,7 +2362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2371,12 +2371,116 @@
     "try:\n",
     "    cur = conn.cursor()\n",
     "    cur.execute(\"\\\n",
-    "select * \\\n",
-    "  from tt_tot_postnum_per_tag_01 \\\n",
-    "  ; \\\n",
+    "select x.year, \\\n",
+    "       sum(x.python)              as python, \\\n",
+    "       sum(x.javascript)          as javascript, \\\n",
+    "       sum(x.reactjs)             as reactjs, \\\n",
+    "       sum(x.java)                as java, \\\n",
+    "       sum(x.csharp)              as csharp, \\\n",
+    "       sum(x.html)                as html, \\\n",
+    "       sum(x.r)                   as r, \\\n",
+    "       sum(x.pandas)              as pandas, \\\n",
+    "       sum(x.css)                 as css, \\\n",
+    "       sum(x.flutter)             as flutter, \\\n",
+    "       sum(x.sql)                 as sql, \\\n",
+    "       sum(x.android)             as android, \\\n",
+    "       sum(x.nodejs)              as nodejs, \\\n",
+    "       sum(x.cplusplus)           as cplusplus, \\\n",
+    "       sum(x.typescript)          as typescript, \\\n",
+    "       sum(x.php)                 as php, \\\n",
+    "       sum(x.python_3x)           as python_3x, \\\n",
+    "       sum(x.dataframe)           as dataframe, \\\n",
+    "       sum(x.arrays)              as arrays, \\\n",
+    "       sum(x.angular)             as angular, \\\n",
+    "       sum(x.django)              as django, \\\n",
+    "       sum(x.json)                as json, \\\n",
+    "       sum(x.dart)                as dart, \\\n",
+    "       sum(x.mysql)               as mysql, \\\n",
+    "       sum(x.c)                   as c, \\\n",
+    "       sum(x.excel)               as excel, \\\n",
+    "       sum(x.laravel)             as laravel, \\\n",
+    "       sum(x.swift)               as swift, \\\n",
+    "       sum(x.spring_boot)         as spring_boot, \\\n",
+    "       sum(x.amazon_web_services) as amazon_web_services, \\\n",
+    "       sum(x.react_native)        as react_native, \\\n",
+    "       sum(x.postgresql)          as postgresql, \\\n",
+    "       sum(x.azure)               as azure, \\\n",
+    "       sum(x.kotlin)              as kotlin, \\\n",
+    "       sum(x.docker)              as docker, \\\n",
+    "       sum(x.list)                as list, \\\n",
+    "       sum(x.firebase)            as firebase, \\\n",
+    "       sum(x.ios)                 as ios, \\\n",
+    "       sum(x.sql_server)          as sql_server, \\\n",
+    "       sum(x.jquery)              as jquery, \\\n",
+    "       sum(x.mongodb)             as mongodb, \\\n",
+    "       sum(x.vuejs)               as vuejs, \\\n",
+    "       sum(x.numpy)               as numpy, \\\n",
+    "       sum(x.net)                 as net, \\\n",
+    "       sum(x.vba)                 as vba, \\\n",
+    "       sum(x.regex)               as regex, \\\n",
+    "       sum(x.string)              as string, \\\n",
+    "       sum(x.spring)              as spring, \\\n",
+    "       sum(x.powershell)          as powershell, \\\n",
+    "       sum(x.linux)               as linux \\\n",
+    "from ( \\\n",
+    "         select SUBSTRING(cdate, 1, 4) as year, \\\n",
+    "                python              as python, \\\n",
+    "                javascript          as javascript, \\\n",
+    "                reactjs             as reactjs, \\\n",
+    "                java                as java, \\\n",
+    "                csharp                as csharp, \\\n",
+    "                html as html, \\\n",
+    "                r                   as r, \\\n",
+    "                pandas              as pandas, \\\n",
+    "                css                 as css, \\\n",
+    "                flutter             as flutter, \\\n",
+    "                sql                 as sql, \\\n",
+    "                android             as android, \\\n",
+    "                nodejs              as nodejs, \\\n",
+    "                cplusplus           as cplusplus, \\\n",
+    "                typescript          as typescript, \\\n",
+    "                php                 as php, \\\n",
+    "                python_3x           as python_3x, \\\n",
+    "                dataframe           as dataframe, \\\n",
+    "                arrays              as arrays, \\\n",
+    "                angular             as angular, \\\n",
+    "                django              as django, \\\n",
+    "                json                as json, \\\n",
+    "                dart                as dart, \\\n",
+    "                mysql               as mysql, \\\n",
+    "                c                   as c, \\\n",
+    "                excel               as excel, \\\n",
+    "                laravel             as laravel, \\\n",
+    "                swift               as swift, \\\n",
+    "                spring_boot         as spring_boot, \\\n",
+    "                amazon_web_services as amazon_web_services, \\\n",
+    "                react_native        as react_native, \\\n",
+    "                postgresql          as postgresql, \\\n",
+    "                azure               as azure, \\\n",
+    "                kotlin              as kotlin, \\\n",
+    "                docker              as docker, \\\n",
+    "                list                as list, \\\n",
+    "                firebase            as firebase, \\\n",
+    "                ios                 as ios, \\\n",
+    "                sql_server          as sql_server, \\\n",
+    "                jquery              as jquery, \\\n",
+    "                mongodb             as mongodb, \\\n",
+    "                vuejs               as vuejs, \\\n",
+    "                numpy               as numpy, \\\n",
+    "                net                 as net, \\\n",
+    "                vba                 as vba, \\\n",
+    "                regex               as regex, \\\n",
+    "                string              as string, \\\n",
+    "                spring              as spring, \\\n",
+    "                powershell          as powershell, \\\n",
+    "                linux               as linux \\\n",
+    "         from tt_tot_postnum_per_tag_01 \\\n",
+    "     ) x \\\n",
+    "group by x.year \\\n",
     "; \\\n",
     "\" \n",
     ")\n",
+    "\n",
     "    rows = cur.fetchall()\n",
     "    \n",
     "except psycopg2.DatabaseError as db_err:\n",
@@ -2388,12 +2492,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.DataFrame(rows, columns = [\n",
-    "'cdate', 'python', 'javascript', 'reactjs', 'java', 'c#',\n",
+    "'year', 'python', 'javascript', 'reactjs', 'java', 'c#',\n",
     "       'html', 'r', 'pandas', 'css', 'flutter', 'sql', 'android', 'nodejs',\n",
     "       'cplusplus', 'typescript', 'php', 'python_3x', 'dataframe', 'arrays',\n",
     "       'angular', 'django', 'json', 'dart', 'mysql', 'c', 'excel', 'laravel',\n",
@@ -2406,12 +2510,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open('../../data/df_postcnt_per_tag_01.pkl', 'wb') as f:\n",
+    "with open('../../data/df_postcnt_per_tag_year_01.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)"
    ]
   },
@@ -2425,7 +2529,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
