--- a/DA/0_data_extract.ipynb
+++ b/DA/0_data_extract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,16 +1458,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v"
+    "df = pd.DataFrame(rows, columns = [\n",
+    "  'creationyear' \n",
+    ", 'posttypeid' \n",
+    ", 'usr_cnt'\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1508,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1521,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2516,6 +2520,120 @@
    "source": [
     "# 전체 데이터셋 \n",
     "with open('../../data/df_postcnt_per_tag_year_01.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "  select xx.cdate, xx.posttypeid, avg(q_cnt) as avg_q_cnt, median(q_cnt) as med_q_cnt \\\n",
+    "    from (select x.usr_id, x.cdate, x.posttypeid, count(x.q_id) as q_cnt \\\n",
+    "  \t\t\tfrom ( \\\n",
+    "\t\t\t\tselect a.id as usr_id, b.posttypeid, to_char(b.creationdate, 'yyyy-mm-dd' ) as cdate, b.id as q_id \\\n",
+    "\t\t\t\t  from users a \\\n",
+    "\t\t\t\t     , posts b \\\n",
+    "\t\t\t\t where a.id = b.owneruserid \\\n",
+    "\t\t\t\t   and b.posttypeid in ('1', '2') \\\n",
+    "\t\t\t\t) x \\\n",
+    "\t\t\t group by x.usr_id, x.cdate, x.posttypeid \\\n",
+    "\t\t\t) xx \\\n",
+    "\tgroup by xx.cdate, xx.posttypeid \\\n",
+    "; \\\n",
+    "\" \n",
+    ")\n",
+    "\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "'cdate', 'posttypeid', 'avg_q_cnt', 'med_q_cnt'\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_uuser_per_post.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select postcreationyear, posttypeid, post_cnt, count(*) as value \\\n",
+    "  from tt_year_per_post_cnt_01 \\\n",
+    "  group by postcreationyear, posttypeid, post_cnt \\\n",
+    "  ; \\\n",
+    "; \\\n",
+    "\" \n",
+    "    )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "'postcreationyear', 'posttypeid', 'post_cnt', 'value'\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_uuser_per_year.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)"
    ]
   },
