--- a/DA/0_data_extract.ipynb
+++ b/DA/0_data_extract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2590,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2601,6 +2601,7 @@
     "    cur.execute(\"\\\n",
     "select postcreationyear, posttypeid, post_cnt, count(*) as value \\\n",
     "  from tt_year_per_post_cnt_01 \\\n",
+    "  where post_cnt != 0 \\\n",
     "  group by postcreationyear, posttypeid, post_cnt \\\n",
     "  ; \\\n",
     "; \\\n",
@@ -2617,7 +2618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2628,12 +2629,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
     "with open('../../data/df_uuser_per_year.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select xx.cdate, xx.posttypeid,xx.qna_cnt, count(xx.usr_id) as value \\\n",
+    "    from (select x.usr_id, x.cdate, x.posttypeid, count(x.qna_id) as qna_cnt \\\n",
+    "  \t\t\tfrom ( \\\n",
+    "\t\t\t\tselect a.id as usr_id, b.posttypeid, to_char(b.creationdate, 'yyyy-mm' ) as cdate, b.id as qna_id \\\n",
+    "\t\t\t\t  from users a \\\n",
+    "\t\t\t\t     , posts b \\\n",
+    "\t\t\t\t where a.id = b.owneruserid \\\n",
+    "\t\t\t\t   and b.posttypeid in ('1', '2') \\\n",
+    "\t\t\t\t   and b.creationdate >='2021-01-01' \\\n",
+    "\t\t\t\t) x \\\n",
+    "\t\t\t group by x.usr_id, x.cdate, x.posttypeid \\\n",
+    "\t\t\t) xx \\\n",
+    "\tgroup by xx.cdate, xx.posttypeid, xx.qna_cnt \\\n",
+    "; \\\n",
+    "\" \n",
+    "    )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "'cdate', 'posttypeid', 'qna_cnt', 'value'\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_qcnt_value_per_ymon.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)"
    ]
   },
