--- a/complexity/0_data_extract.ipynb
+++ b/complexity/0_data_extract.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,8 @@
     "  from posts a \\\n",
     "     , postsbody b \\\n",
     "where a.id = b.id \\\n",
-    "  and a.creationdate between '2021-11-01' and '2023-12-01' \\\n",
+    "  and to_char(a.creationdate, 'yyyy-mm-dd') >= '2021-01-01' \\\n",
+    "  and to_char(a.creationdate, 'yyyy-mm-dd') <= '2021-12-31' \\\n",
     "  and posttypeid = '1' \\\n",
     "  and a.tags like '%<python>%' \\\n",
     "; \\\n",
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,12 +136,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open('../../data/complexity_python_df.pkl', 'wb') as f:\n",
+    "with open('../../data/complexity_python_df_2021.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select a.id, to_char(a.creationdate, 'yyyy-mm-dd') as cdate, a.title, b.body \\\n",
+    "  from posts a \\\n",
+    "     , postsbody b \\\n",
+    "where a.id = b.id \\\n",
+    "  and to_char(a.creationdate, 'yyyy-mm-dd') >= '2022-01-01' \\\n",
+    "  and to_char(a.creationdate, 'yyyy-mm-dd') <= '2022-12-31' \\\n",
+    "  and posttypeid = '1' \\\n",
+    "  and a.tags like '%<python>%' \\\n",
+    "; \\\n",
+    "                \" \n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "  'id' \n",
+    ", 'cdate' \n",
+    ", 'title'\n",
+    ", 'body'\n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/complexity_python_df_2022.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select a.id, to_char(a.creationdate, 'yyyy-mm-dd') as cdate, a.title, b.body \\\n",
+    "  from posts a \\\n",
+    "     , postsbody b \\\n",
+    "where a.id = b.id \\\n",
+    "  and a.creationdate between '2023-01-01' and '2023-12-04' \\\n",
+    "  and posttypeid = '1' \\\n",
+    "  and a.tags like '%<python>%' \\\n",
+    "; \\\n",
+    "                \" \n",
+    "   )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "  'id' \n",
+    ", 'cdate' \n",
+    ", 'title'\n",
+    ", 'body'\n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/complexity_python_df_2023.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)\n"
    ]
   },
