--- a/annotating/1_random_selection.ipynb
+++ b/annotating/1_random_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,17 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(10)\n",
+    "# np.random.seed(10)\n",
+    "np.random.seed(11)\n",
     "first_ann_q_id = np.random.choice(population, size=50, replace=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,65 +103,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[77293473,\n",
-       " 77404924,\n",
-       " 77249095,\n",
-       " 77076663,\n",
-       " 77019129,\n",
-       " 76992629,\n",
-       " 77370805,\n",
-       " 76717996,\n",
-       " 76784524,\n",
-       " 76608783,\n",
-       " 76697269,\n",
-       " 76317584,\n",
-       " 76570219,\n",
-       " 76302571,\n",
-       " 76548866,\n",
-       " 76541602,\n",
-       " 76264395,\n",
-       " 76169010,\n",
-       " 76169378,\n",
-       " 76059076,\n",
-       " 76045819,\n",
-       " 76085427,\n",
-       " 75779691,\n",
-       " 75862649,\n",
-       " 75637544,\n",
-       " 75460677,\n",
-       " 75454689,\n",
-       " 75531218,\n",
-       " 75283999,\n",
-       " 75281532,\n",
-       " 75279786,\n",
-       " 75198212,\n",
-       " 75057003,\n",
-       " 75179892,\n",
-       " 75239843,\n",
-       " 75024902,\n",
-       " 75008807,\n",
-       " 74978553,\n",
-       " 74979205,\n",
-       " 74778102,\n",
-       " 74774389,\n",
-       " 74760874,\n",
-       " 74751254,\n",
-       " 74693871,\n",
-       " 74844950,\n",
-       " 74804354,\n",
-       " 77553477,\n",
-       " 77543317,\n",
-       " 77511053,\n",
-       " 77467788]"
+       "[77447504,\n",
+       " 77406962,\n",
+       " 77234688,\n",
+       " 77038170,\n",
+       " 77387888,\n",
+       " 77006145,\n",
+       " 76987392,\n",
+       " 76863235,\n",
+       " 77358032,\n",
+       " 77340854,\n",
+       " 76778911,\n",
+       " 76610768,\n",
+       " 76775231,\n",
+       " 76707984,\n",
+       " 76750481,\n",
+       " 76450897,\n",
+       " 76440490,\n",
+       " 76397993,\n",
+       " 76195648,\n",
+       " 76532248,\n",
+       " 76256380,\n",
+       " 76235236,\n",
+       " 76077630,\n",
+       " 76021133,\n",
+       " 75766189,\n",
+       " 75846310,\n",
+       " 75723093,\n",
+       " 75796983,\n",
+       " 75799357,\n",
+       " 75949420,\n",
+       " 75622488,\n",
+       " 75487734,\n",
+       " 75463734,\n",
+       " 75456156,\n",
+       " 75408690,\n",
+       " 75286184,\n",
+       " 75192674,\n",
+       " 75079430,\n",
+       " 75155148,\n",
+       " 75142452,\n",
+       " 75244373,\n",
+       " 75025075,\n",
+       " 75119595,\n",
+       " 75101451,\n",
+       " 74957879,\n",
+       " 74644974,\n",
+       " 74762188,\n",
+       " 74751310,\n",
+       " 74896655,\n",
+       " 74880405]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
