--- a/complexity/2_cognitive_complexity_2021.ipynb
+++ b/complexity/2_cognitive_complexity_2021.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,13 +366,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open(f'../../data/calc_com_df_{input_year}.pkl', 'rb') as f:\n",
-    "    calc_com_df = pickle.load(f)"
+    "with open(f'../../data/calc_com_df_{input_year}.pkl', 'wb') as f:\n",
+    "    pickle.dump(calc_com_df, f)"
    ]
   },
   {
