--- a/complexity/cpp/3_cognitive_complexity_viz.ipynb
+++ b/complexity/cpp/3_cognitive_complexity_viz.ipynb
@@ -2,6 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://ppiazi.tistory.com/entry/python-cyclomatic-complexity-%EB%AA%A8%EB%93%88-lizard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://github.com/terryyin/lizard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install cognitive_complexity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install statsmodels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install --upgrade pandas==2.2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import numpy as np\n",
+    "# np.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install --upgrade numexpr==2.8.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install linearmodels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -32,39 +128,6 @@
     "from linearmodels.panel import compare\n",
     "import seaborn as sns\n",
     "import matplotlib.patches as mpatches"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# C++ 코드 예제\n",
-    "cpp_code = \"\"\"\n",
-    "#include <iostream>\n",
-    "using namespace std;\n",
-    "\n",
-    "void exampleFunction(int a) {\n",
-    "    if (a > 0) {\n",
-    "        for (int i = 0; i < a; i++) {\n",
-    "            if (i % 2 == 0) {\n",
-    "                cout << i << endl;\n",
-    "            } else {\n",
-    "                while (i < 5) {\n",
-    "                    i++;\n",
-    "                }\n",
-    "            }\n",
-    "        }\n",
-    "    } else {\n",
-    "        return;\n",
-    "    }\n",
-    "}\n",
-    "\"\"\"\n",
-    "\n",
-    "calculator = CognitiveComplexityCalculator()\n",
-    "complexity = calculator.calculate(cpp_code)\n",
-    "print(\"Cognitive Complexity:\", complexity)\n"
    ]
   },
   {
