--- a/annotating/0_data_extract.ipynb
+++ b/annotating/0_data_extract.ipynb
@@ -35,7 +35,7 @@
     "try:\n",
     "    cur = conn.cursor()\n",
     "    cur.execute(\"\\\n",
-    "select a.id \\\n",
+    "select a.id, title,  \\\n",
     "  from posts a \\\n",
     "  where a.creationdate between '2022-11-30' and '2023-11-30' \\\n",
     "    and a.posttypeid = '1' \\\n",
