--- a/complexity/2_cognitive_complexity_2021.ipynb
+++ b/complexity/2_cognitive_complexity_2021.ipynb
@@ -43,7 +43,8 @@
     "import pprint\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.ticker as ticker"
+    "import matplotlib.ticker as ticker\n",
+    "# https://joaorafaelm.github.io/notebook/python/2021/04/10/cognitive-complexity.html"
    ]
   },
   {
