--- a/annotating/1_random_selection.ipynb
+++ b/annotating/1_random_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,22 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Argument 'placement' has incorrect type (expected pandas._libs.internals.BlockPlacement, got slice)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# 파일 불러오기\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../../data/ann_qid.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m----> 3\u001b[0m     df \u001b[38;5;241m=\u001b[39m \u001b[43mpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/internals/blocks.py:2721\u001b[0m, in \u001b[0;36mnew_block\u001b[0;34m(values, placement, ndim, refs)\u001b[0m\n\u001b[1;32m   2709\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mnew_block\u001b[39m(\n\u001b[1;32m   2710\u001b[0m     values,\n\u001b[1;32m   2711\u001b[0m     placement: BlockPlacement,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2718\u001b[0m     \u001b[38;5;66;03m# - check_ndim/ensure_block_shape already checked\u001b[39;00m\n\u001b[1;32m   2719\u001b[0m     \u001b[38;5;66;03m# - maybe_coerce_values already called/unnecessary\u001b[39;00m\n\u001b[1;32m   2720\u001b[0m     klass \u001b[38;5;241m=\u001b[39m get_block_type(values\u001b[38;5;241m.\u001b[39mdtype)\n\u001b[0;32m-> 2721\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mklass\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mndim\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mndim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mplacement\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mplacement\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrefs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrefs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Argument 'placement' has incorrect type (expected pandas._libs.internals.BlockPlacement, got slice)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 파일 불러오기\n",
     "with open('../../data/ann_qid.pkl', 'rb') as f:\n",
@@ -38,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,71 +103,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[77447504,\n",
-       " 77406962,\n",
-       " 77234688,\n",
-       " 77038170,\n",
-       " 77387888,\n",
-       " 77006145,\n",
-       " 76987392,\n",
-       " 76863235,\n",
-       " 77358032,\n",
-       " 77340854,\n",
-       " 76778911,\n",
-       " 76610768,\n",
-       " 76775231,\n",
-       " 76707984,\n",
-       " 76750481,\n",
-       " 76450897,\n",
-       " 76440490,\n",
-       " 76397993,\n",
-       " 76195648,\n",
-       " 76532248,\n",
-       " 76256380,\n",
-       " 76235236,\n",
-       " 76077630,\n",
-       " 76021133,\n",
-       " 75766189,\n",
-       " 75846310,\n",
-       " 75723093,\n",
-       " 75796983,\n",
-       " 75799357,\n",
-       " 75949420,\n",
-       " 75622488,\n",
-       " 75487734,\n",
-       " 75463734,\n",
-       " 75456156,\n",
-       " 75408690,\n",
-       " 75286184,\n",
-       " 75192674,\n",
-       " 75079430,\n",
-       " 75155148,\n",
-       " 75142452,\n",
-       " 75244373,\n",
-       " 75025075,\n",
-       " 75119595,\n",
-       " 75101451,\n",
-       " 74957879,\n",
-       " 74644974,\n",
-       " 74762188,\n",
-       " 74751310,\n",
-       " 74896655,\n",
-       " 74880405]"
+       "[75796624,\n",
+       " 75783279,\n",
+       " 75851364,\n",
+       " 75757694,\n",
+       " 75987098,\n",
+       " 75972941,\n",
+       " 75728933,\n",
+       " 75633967,\n",
+       " 75669587,\n",
+       " 75517851,\n",
+       " 75488955,\n",
+       " 75474086,\n",
+       " 75531046,\n",
+       " 75227129,\n",
+       " 75424666,\n",
+       " 75308496,\n",
+       " 75094117,\n",
+       " 75134947,\n",
+       " 75283309,\n",
+       " 75263145,\n",
+       " 74912672,\n",
+       " 74810938,\n",
+       " 74897888,\n",
+       " 74750743,\n",
+       " 74691393]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "q_id_list"
+    "q_id_list[25:]"
    ]
   },
   {
